# gws-llvm-project

mlir/examples/: CMakeLists.txt
mlir/examples/gws/: CMakeLists.txt  gwsc.cpp
mlir/examples/gws/include/: CMakeLists.txt
mlir/examples/gws/include/gws/: AST.h  CMakeLists.txt  Dialect.h  Lexer.h  MLIRGen.h  Ops.td  Parser.h  Passes.h  ShapeInferenceInterface.h
mlir/examples/gws/mlir/: Dialect.cpp  GwsCombine.cpp  GwsCombine.td  LowerToAffineLoops.cpp  MLIRGen.cpp  ShapeInferencePass.cpp
mlir/examples/gws/parser/: AST.cpp
mlir/test/Examples/Gws/: affine-lowering.mlir
